[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "native-simulators/withdrawal-intent-sim",
  "contracts/withdrawal-intent",
  "native-simulators/purchase-intent-sim",
  "contracts/purchase-intent",
  "native-simulators/account-book-sim",
  "contracts/account-book",
  "crate/spore-types",
  "tests",
]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true
