[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[features]
native-simulator = [ "ckb-testtool/native-simulator" ]

[dependencies]
ckb-testtool = "0.14.0"
serde_json = "1.0"
molecule = { version = "0.8.0" }

types = { path = "../crate/types" }
spore-types = { path = "../crate/spore-types" }
lazy_static = "1.5.0"
