[package]
name = "buy-intent"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { version = "0.16.4", features = ["log"] }
types = { path = "../../crate/types" }
utils = { path = "../../crate/utils" }
spore-types = { path = "../../crate/spore-types" }
molecule = { version = "0.8.0", default-features = false }

[features]
native-simulator = ["ckb-std/native-simulator"]
